<resources>
    <string name="app_name">Moweb</string>
    <string name="title_activity_settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="done">Done</string>
    <string name="edit">Edit…</string>
    <string name="edit_title">Edit</string>
    <string name="title">Title</string>
    <string name="url">URL</string>
    <string name="url_copied_clipboard">URL has been copied to your clipboard!</string>
    <string name="folder_chooser_title">Choose folder</string>
    <string name="save">Save</string>
    <string name="never">Never</string>
    <string name="create">Create</string>
    <string name="select">Select</string>
    <string name="details">Details</string>
    <string name="advanced">Advanced</string>
    <string name="empty_selection_message">You need to select items first</string>
    <string name="yes">Yes</string>
    <string name="add">Add</string>
    <string name="a_lot_of_tabs">99+</string>
    <string name="changes_saved">Changes were saved!</string>
    <string name="download_notification_cancel">Cancel</string>
    <string name="download_notification_pause">Pause</string>
    <string name="download_notification_resume">Resume</string>
    <string name="copy_password">Copy Password</string>
    <string name="copy_username">Copy Username</string>
    <string name="copy_host">Copy Host</string>
    <string name="search_username_host">Search username or host …</string>
    <string name="open_in_tab">Open in new tab</string>
    <string name="open_in_private_tab">Open in new private tab</string>
    <string name="copy_link_address">Copy link address</string>
    <string name="link_address_copied">Link address was copied to your clipboard!</string>
    <string name="copy_link_text">Copy link text</string>
    <string name="link_text_copied">Link text was copied to your clipboard!</string>
    <string name="download_link">Download link</string>
    <string name="share_link">Share link</string>
    <string name="share_image">Share image</string>
    <string name="tab_search_hint">Search or enter URL</string>
    <string name="find_in_page">Find</string>
    <string name="history">History</string>
    <string name="downloads">Downloads</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="share">Share</string>
    <string name="desktop_mode">Desktop mode</string>
    <string name="refresh">Refresh</string>
    <string name="bookmark">Bookmark</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="empty"/>
    <string name="Settings">Settings</string>
    <string name="History">History</string>
    <string name="Clear_All_Normal_Tabs">Close All Tabs</string>
    <string name="Clear_All_Normal_Tabs_Description">Are you sure you want to close all of your normal tabs? This Action can not be undone</string>
    <string name="Clear_All_Normal_Tabs_Empty">You currently have no normal tabs!</string>
    <string name="Clear_All_Incognito_Tabs">Close All Private Tabs</string>
    <string name="Clear_All_Incognito_Tabs_Description">Are you sure you want to close all of your private tabs? This Action can not be undone</string>
    <string name="Clear_All_Incognito_Tabs_Empty">You currently have no private tabs!</string>
    <string name="NewTab">New Tab</string>
    <string name="NewIncognitoTab">New Private Tab</string>
    <string name="toast_closed_all_normal_tabs">All normal tabs were closed!</string>
    <string name="toast_closed_all_incognito_tabs">All private tabs were closed!</string>
    <string name="search_engine">search_engine_pref</string>
    <string name="search_engine_title">Search Engine</string>
    <string name="search_engine_summary">Change the search engine of this app</string>
    <string-array name="search_engine_entries">
        <item>Google</item>
        <item>Duck Duck Go</item>
    </string-array>
    <string-array name="search_engine_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="theme_version">theme_version_pref</string>
    <string name="theme_version_title">Theme</string>
    <string name="theme_version_summary">Change the theme of this app by choosing between dark,
        light, or follow the system options</string>
    <string-array name="theme_version_entries">
        <item>Light</item>
        <item>Dark</item>
        <item>Follow system</item>
    </string-array>
    <string-array name="theme_version_values">
        <item>0</item>
        <item>1</item>
        <item>-1</item>
    </string-array>
    <string name="auto_complete">auto_complete_pref</string>
    <string name="auto_complete_title">Search Auto-Complete</string>
    <string name="auto_complete_summary">Show suggestions while searching</string>
    <string name="history_enabled">history_enabled_pref</string>
    <string name="history_enabled_title">History</string>
    <string name="history_enabled_summary">Track history for normal tabs</string>
    <string name="history_search_hint">Search title, url, or date…</string>
    <string name="cookies_title">Cookies</string>
    <string name="cookies_summary">If enabled, websites can remember stateful information about your browsing activity.
        *Note that turning off this feature could cause some problems when browsing</string>
    <string name="cookies_enabled">Cookies_enabled</string>
    <string name="clear_cookies_title">Clear cookies</string>
    <string name="clear_cookies_summary">Clear stateful information that websites have stored on your device</string>
    <string name="clear_cookies_dialogMessage">Are you sure that you would like to clear your cookies?</string>
    <string name="clear_cookies_successfulToast">Cookies have been successfully cleared!</string>
    <string name="home_page">home_page_pref</string>
    <string name="home_page_hint_edit_text">Add home page</string>
    <string name="home_page_title">Home Page</string>
    <string name="home_page_summary">Opens the activated url in your browser when you click on the homepage button. If this is disabled,
        then the appropriate homepage for a search engine is shown</string>
    <string name="new_home_page">New Home Page</string>
    <string name="new_home_page_hint">Enter a URL</string>
    <string name="new_home_page_description">Adds a new home page to your list of home pages. Clicking on a homepage will make it the activated homepage</string>
    <string name="already_exist_home_page">You have already added this homepage</string>
    <string name="malformed_url">URL is not recognizable</string>
    <string name="add_home_page">Add Homepage</string>
    <string name="passwords_title">Passwords</string>
    <string name="passwords_summary">Edit the saved password settings</string>
    <string name="passwords_enabled">Passwords_enable</string>
    <string name="bookmark_title">Bookmarks</string>
    <string name="name">Name</string>
    <string name="name_hint">Enter a name</string>
    <string name="url_hint">Enter a url</string>
    <string name="add_folder_in_bookmark_hint_dialog">Folder name</string>
    <string name="new_folder">New Folder</string>
    <string name="new_folder_message">Enter the name of the folder and press create</string>
    <string name="error_bookmark_empty_name">Name can not be empty</string>
    <string name="error_bookmark_empty_url">URL can not be empty</string>
    <string name="error_bookmark_url_already_exist">URL already exist</string>
    <string name="error_bookmark_folder_already_exist">Folder already exist</string>
    <string name="move_bookmarks">Move bookmarks</string>
    <string name="clear_all_bookmarks_title">Clear All</string>
    <string name="clear_all_bookmarks_message">Do you want to clear all bookmarks/folders?</string>
    <string name="save_password_title">Save Password</string>
    <string name="save_password_description">Do you want to save this information about your account?</string>
    <string name="passwords">Passwords</string>
    <string name="download">download</string>
    <string name="download_location_key">download_location_key</string>
    <string name="download_activity_failed_permission">We need access to your external storage in order to show or download links for you</string>
    <string name="download_activity_success_permission">Please click the download link again to start the download</string>
    <string name="download_could_not_open_file">Could not open the file</string>
    <string name="set_as_default_key">set_as_default_key</string>
    <string name="set_as_default_title">Set as default</string>
    <string name="set_as_default_description">Set this application as your default browser app</string>
    <string name="ssl_proceed">Take the risk and continue</string>
    <string name="ssl_decline">Go Back to safety (Recommended)</string>
    <string name="snap_search">Snap search</string>
    <string name="snap_search_summary">When browsing, long clicks on words will open another search window from the bottom of your screen</string>
    <string name="snap_search_enabled">Snap_search</string>
    <string name="one_hand_web">One-hand web</string>
    <string name="one_hand_web_summary">You can pull down the browser screen to bring in the out-of-reach content on the web.
        Also when you scroll on the web, the search bar automatically hides</string>
    <string name="one_hand_web_enabled">one_hand_web</string>
    <string name="connection_is_secure_title">Connection is secure</string>
    <string name="connection_is_secure_description">The information you share with this website (such as passwords, credit card, etc.) is private</string>
    <string name="connection_is_not_secure_title">Connection is not secure</string>
    <string name="connection_is_not_secure_description">Don\'t share any sensitive information (such as passwords, credit card, etc.)
        with this website as it might be stolen by attackers</string>
    <string name="empty_layout_title_bookmark">No bookmark found</string>
    <string name="empty_layout_title_history">No history found</string>
    <string name="empty_layout_title_tab">No tab found</string>
    <string name="empty_layout_title_private_tab">No private tab found</string>
    <string name="empty_layout_title_downloads">No file found</string>
    <string name="empty_layout_title_bookmark_folders">No folder found</string>
    <string name="empty_layout_description_bookmark">Seems like you don\'t have any bookmarks. You can bookmark websites that you like and visit them at a later time.
        You can also organize them in folders or edit them</string>
    <string name="empty_layout_description_history">We could not find any history around here. You can enable or disable history tracking inside the settings</string>
    <string name="empty_layout_description_tab">Hmm no tab found. If you want to search the web just click the plus sign on the bottom of your screen and you are ready to go!</string>
    <string name="empty_layout_description_private_tab">When you are in private tabs, the websites that you visit are not saved into your history and tabs are not saved after you close the app.
        Be careful as this does not mean other search engines are not tracking your data</string>
    <string name="empty_layout_description_downloads">Seems like you have no downloads here. You can download different files from
        the web, but be careful because some files can be dangerous</string>
    <string name="empty_layout_description_bookmark_folders">Create folders to organize your bookmarks or other folders</string>
    <string name="sharedPref_alreadySetDefault">already_set_default</string>
</resources>