<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="General" app:iconSpaceReserved="false">
        <ListPreference
            app:key="@string/search_engine"
            app:title="@string/search_engine_title"
            app:summary="@string/search_engine_summary"
            app:entries="@array/search_engine_entries"
            app:entryValues="@array/search_engine_values"
            app:iconSpaceReserved="false"/>

        <ListPreference
            app:key="@string/theme_version"
            app:title="@string/theme_version_title"
            app:summary="@string/theme_version_summary"
            app:entries="@array/theme_version_entries"
            app:entryValues="@array/theme_version_values"
            app:iconSpaceReserved="false"/>

        <Preference android:key="@string/home_page"
            android:title="@string/home_page_title"
            android:summary="@string/home_page_summary"
            app:iconSpaceReserved="false"/>


        <Preference android:key="@string/set_as_default_key"
        android:title="@string/set_as_default_title"
        android:summary="@string/set_as_default_description"
        app:iconSpaceReserved="false"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="Security" app:iconSpaceReserved="false">

        <SwitchPreference
            android:key="@string/history_enabled"
            app:title="@string/history_enabled_title"
            app:summary="@string/history_enabled_summary"
            app:defaultValue="true"
            app:iconSpaceReserved="false"/>

        <SwitchPreference
            android:key="@string/auto_complete"
            app:title="@string/auto_complete_title"
            app:summary="@string/auto_complete_summary"
            app:defaultValue="true"
            app:iconSpaceReserved="false"/>

        <SwitchPreference
            android:key="@string/cookies_enabled"
            app:title="@string/cookies_title"
            app:summary="@string/cookies_summary"
            app:defaultValue="true"
            app:iconSpaceReserved="false"/>

        <Preference
            android:key="@string/clear_cookies_title"
            app:title="@string/clear_cookies_title"
            app:summary="@string/clear_cookies_summary"
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="Smart features" app:iconSpaceReserved="false">

        <SwitchPreference
            android:key="@string/snap_search_enabled"
            app:title="@string/snap_search"
            app:summary="@string/snap_search_summary"
            app:defaultValue="true"
            app:iconSpaceReserved="false"/>

        <SwitchPreference
            android:key="@string/one_hand_web_enabled"
            app:title="@string/one_hand_web"
            app:summary="@string/one_hand_web_summary"
            app:defaultValue="true"
            app:iconSpaceReserved="false"/>

    </PreferenceCategory>


</PreferenceScreen>
